--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "body-parser": "^1.17.2",
     "consolidate": "^0.14.5",
     "cookie-parser": "^1.4.3",
-    "database": "^0.0.2",
+    "database": "0.0.2",
     "express": "^4.15.3",
     "express-flash": "0.0.2",
     "express-session": "^1.15.3",
